# local-health-assistant

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: privacy-policy.md  rules.md  terms-of-service.md
docs/examples/: baseline-2026-01-24.json
docs/specs/: 2026-04-11-local-health-assistant-design.md  2026-04-24-weight-meal-activity-loop-design.md  2026-04-27-real-use-mvp.md  2026-05-07-routine-v1-prd.md
src/local_health_assistant/: __init__.py  __main__.py  app.py  baseline.py  config.py  insights.py  models.py  oura.py  parsing.py  scheduler.py  service.py  storage.py
